--- a/vacuumvpn-server.conf
+++ b/vacuumvpn-server.conf
@@ -1,3 +1,7 @@
+# Place this file in /etc/openvpn on CentOS 7 and then
+# (re)start OpenVPN with:
+# systemctl restart openvpn@vacuumvpn-server.service
+
 #port 1194
 port 443
 proto tcp
@@ -5,9 +9,8 @@ dev tun
 topology subnet
 
 tls-server
-;verify-client-cert require
 script-security 2
-tls-verify /etc/openvpn/server/vacuumvpn-tls-verify
+tls-verify /etc/openvpn/vacuumvpn-tls-verify
 capath /etc/grid-security/certificates
 cert   /etc/grid-security/hostcert.pem
 key    /etc/grid-security/hostkey.pem
@@ -28,3 +31,6 @@ status openvpn-status.log
 status-version 2
 verb 3
 #explicit-exit-notify 1
+
+# This is included at the end so can overide any other options
+config vacuumvpn-local.conf
